--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
   }
 table,
 td {
-  border: 2px solid black;
+  border: 2px solid white;
   color: #fff;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: x-large;
