--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ td {
 
 th {
   color: #fff;
-  border: 2px solid black;
+  border: 2px solid white;
   font-size: x-large;
   text-align: center;
   padding: 5px;
